[gd_scene load_steps=6 format=3 uid="uid://b23mcmr61apt5"]

[ext_resource type="Script" uid="uid://fkuslid0ql5u" path="res://Display/log.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://squafa6ycs70" path="res://Display/control_panel.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://dsv7aeia6v0na" path="res://web_socket.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://cgfp3sxk2j748" path="res://Display/status_indicator.gd" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://bqyya7msotl3p" path="res://room_manager.gd" id="5_lquwl"]

[node name="Main" type="Node"]

[node name="Display" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Display"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Display/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control Panel" type="CenterContainer" parent="Display/MarginContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("web_socket")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_h2yge")
web_socket = NodePath("../../../../../WebSocket")

[node name="HBoxContainer" type="HBoxContainer" parent="Display/MarginContainer/VBoxContainer/HBoxContainer/Control Panel"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Display/MarginContainer/VBoxContainer/HBoxContainer/Control Panel/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Start"

[node name="StopButton" type="Button" parent="Display/MarginContainer/VBoxContainer/HBoxContainer/Control Panel/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Stop"

[node name="Status Indicator" type="CenterContainer" parent="Display/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("2_1bvp3")

[node name="ColorRect" type="ColorRect" parent="Display/MarginContainer/VBoxContainer/HBoxContainer/Status Indicator"]
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="Log" type="ScrollContainer" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("1_0xm2m")

[node name="PanelContainer" type="PanelContainer" parent="Display/MarginContainer/VBoxContainer/Log"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Display/MarginContainer/VBoxContainer/Log/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="WebSocket" type="Node" parent="." node_paths=PackedStringArray("logger")]
script = ExtResource("1_ig7tw")
logger = NodePath("../Display/MarginContainer/VBoxContainer/Log")

[node name="RoomManager" type="Node" parent="." node_paths=PackedStringArray("logger")]
script = ExtResource("5_lquwl")
logger = NodePath("../Display/MarginContainer/VBoxContainer/Log")

[connection signal="pressed" from="Display/MarginContainer/VBoxContainer/HBoxContainer/Control Panel/HBoxContainer/StartButton" to="Display/MarginContainer/VBoxContainer/HBoxContainer/Control Panel" method="_on_click_start"]
[connection signal="pressed" from="Display/MarginContainer/VBoxContainer/HBoxContainer/Control Panel/HBoxContainer/StopButton" to="Display/MarginContainer/VBoxContainer/HBoxContainer/Control Panel" method="_on_click_stop"]
[connection signal="received_message" from="WebSocket" to="RoomManager" method="_on_web_socket_received_message"]
[connection signal="server_closed" from="WebSocket" to="Display/MarginContainer/VBoxContainer/HBoxContainer/Status Indicator" method="on_closed"]
[connection signal="server_started" from="WebSocket" to="Display/MarginContainer/VBoxContainer/HBoxContainer/Status Indicator" method="on_started"]
[connection signal="server_starting" from="WebSocket" to="Display/MarginContainer/VBoxContainer/HBoxContainer/Status Indicator" method="on_starting"]
